# thrustler

./: Cargo.toml
assets/shaders/wgsl/: simple_shader.wgsl
crates/core/: Cargo.toml
crates/core/src/: error.rs  errors.rs  game_objects.rs  lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: error.rs  lib.rs
crates/vulkan/: Cargo.toml
crates/vulkan/src/: lib.rs  shaders.rs  vulkano_tools.rs
crates/wgpu/: Cargo.toml
crates/wgpu/src/: lib.rs  wgpu_tools.rs
crates/winit-window/: Cargo.toml
crates/winit-window/src/: error.rs  lib.rs
examples/: sierpinski_triangles.rs  triangle.rs  wgpu_test.rs
