[package]
name = "vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core.workspace = true
error-stack.workspace = true
raw-window-handle.workspace = true
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"