[package]
name = "vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core.workspace = true
error-stack.workspace = true
raw-window-handle = "0.6.2"
# that commit is used because of https://github.com/vulkano-rs/vulkano/pull/2490
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git", rev = "b1506a0" }
vulkano-shaders = "0.34.0"