[package]
name = "winit-window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core.workspace = true
error-stack.workspace = true
raw-window-handle.workspace = true
winit = { version = "0.30.0", features = ["rwh_05"] }